--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,11 @@
 <resources>
 
     <string name="app_name">MyBudgetPal</string>
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_create_budget">Create Budget</string>
     <string name="title_activity_add_expense">Add Expense</string>
+    <string name="title_activity_loading_splash">MyBudgetPal</string>
+    <string name="title_activity_welcome">Welcome</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
